# algokit-core

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json
api/oas_generator/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
api/oas_generator/rust_oas_generator/: __init__.py  cli.py
api/oas_generator/rust_oas_generator/generator/: __init__.py  filters.py  template_engine.py
api/oas_generator/rust_oas_generator/parser/: __init__.py  oas_parser.py
api/oas_generator/rust_oas_generator/utils/: __init__.py  file_utils.py  string_case.py
api/oas_generator/tests/: __init__.py  test_msgpack_implementation.py
api/oas_generator/ts_oas_generator/: __init__.py  cli.py
api/oas_generator/ts_oas_generator/generator/: __init__.py  filters.py  models.py  template_engine.py
api/oas_generator/ts_oas_generator/parser/: __init__.py
api/oas_generator/ts_oas_generator/utils/: __init__.py
crates/algod_api/: Cargo.toml
crates/algod_api/src/: lib.rs
crates/algod_client/: Cargo.toml  README.md
crates/algod_client/src/: lib.rs
crates/algod_client/src/apis/: abort_catchup.rs  account_application_information.rs  account_asset_information.rs  account_assets_information.rs  account_information.rs  add_participation_key.rs  append_keys.rs  client.rs  delete_participation_key_by_id.rs  experimental_check.rs  generate_participation_keys.rs  get_application_box_by_name.rs  get_application_boxes.rs  get_application_by_id.rs  get_asset_by_id.rs  get_block.rs  get_block_hash.rs  get_block_logs.rs  get_block_time_stamp_offset.rs  get_block_txids.rs  get_config.rs  get_debug_settings_prof.rs  get_genesis.rs  get_ledger_state_delta.rs  get_ledger_state_delta_for_transaction_group.rs  get_light_block_header_proof.rs  get_participation_key_by_id.rs  get_participation_keys.rs  get_pending_transactions.rs  get_pending_transactions_by_address.rs  get_ready.rs  get_state_proof.rs  get_status.rs  get_supply.rs  get_sync_round.rs  get_transaction_group_ledger_state_deltas_for_round.rs  get_transaction_proof.rs  get_version.rs  health_check.rs  metrics.rs  (+18 more)
crates/algod_client/src/models/: abort_catchup.rs  account.rs  account_application_information.rs  account_asset_holding.rs  account_asset_information.rs  account_assets_information.rs  account_participation.rs  account_state_delta.rs  add_participation_key.rs  app_call_logs.rs  application.rs  application_initial_states.rs  application_kv_storage.rs  application_local_reference.rs  application_local_state.rs  application_params.rs  application_state_operation.rs  application_state_schema.rs  asset.rs  asset_holding.rs  asset_holding_reference.rs  asset_params.rs  avm_key_value.rs  avm_value.rs  box_descriptor.rs  box_model.rs  box_reference.rs  build_version.rs  debug_settings_prof.rs  dryrun_request.rs  dryrun_source.rs  dryrun_state.rs  dryrun_txn_result.rs  error_response.rs  eval_delta.rs  eval_delta_key_value.rs  genesis.rs  genesis_allocation.rs  get_application_boxes.rs  get_block.rs  (+45 more)
crates/algod_client_tests/: Cargo.toml  README.md
crates/algod_client_tests/src/: account_helpers.rs  fixtures.rs  lib.rs  localnet.rs  mnemonic.rs
crates/algod_client_tests/tests/: pending_transaction_information.rs  raw_transaction.rs  simulate_transactions.rs  transaction_params.rs
crates/algokit_abi/: Cargo.toml  README.md
crates/algokit_abi/src/: abi_method.rs  abi_type.rs  abi_value.rs  arc56_contract.rs  constants.rs  error.rs  lib.rs  method.rs  utils.rs
crates/algokit_abi/src/types/: mod.rs
crates/algokit_abi/tests/: test_arc56.rs
crates/algokit_abi/tests/snapshots/: test_arc56__arc56_json_roundtrip@arc56_struct_operations.snap  test_arc56__arc56_json_roundtrip@complex_struct_test.snap  test_arc56__arc56_json_roundtrip@constant_product_amm.snap  test_arc56__arc56_json_roundtrip@nested_contract_calls.snap  test_arc56__arc56_json_roundtrip@nested_struct_storage.snap  test_arc56__arc56_json_roundtrip@nfd.snap  test_arc56__arc56_json_roundtrip@reti.snap  test_arc56__arc56_json_roundtrip@state_management_demo.snap  test_arc56__arc56_json_roundtrip@template_variables.snap  test_arc56__arc56_json_roundtrip@void_return_test.snap  test_arc56__arc56_json_roundtrip@zero_coupon_bond.snap  test_arc56__arc56_state_keys_are_not_normalized.snap
crates/algokit_http_client/: Cargo.toml
crates/algokit_http_client/src/: lib.rs
crates/algokit_test_artifacts/: Cargo.toml  README.md
crates/algokit_test_artifacts/contracts/abi-create-and-delete/: contract.py
crates/algokit_test_artifacts/contracts/boxmap/: approval.teal
crates/algokit_test_artifacts/contracts/msgpack_test_data/: app_state.json  state_delta_tx.json
crates/algokit_test_artifacts/msgpack/: testnet_global_state_delta_tx.json  testnet_local_state_delta_tx.json  testnet_state_proof_tx.json
crates/algokit_test_artifacts/src/: lib.rs
crates/algokit_transact/: Cargo.toml  README.md
crates/algokit_transact/src/: account.rs  address.rs  constants.rs  error.rs  keypair_account.rs  lib.rs  multisig.rs  tests.rs  traits.rs  utils.rs
crates/algokit_transact/src/msgpack/: mod.rs
crates/algokit_transact/src/test_utils/: app_call.rs  application_call.rs  asset_config.rs  asset_freeze.rs  heartbeat.rs  key_registration.rs  mod.rs  state_proof.rs
crates/algokit_transact/src/transactions/: app_call.rs  application_call.rs  asset_config.rs  asset_freeze.rs  asset_transfer.rs  common.rs  heartbeat.rs  key_registration.rs  (+3 more)
crates/algokit_transact/tests_msgpack/: account_tests.rs  simulate_tests.rs
crates/algokit_transact_ffi/: Cargo.toml  README.md  build.rs  polytest.toml  test_data.json  test_plan.md  uniffi.toml
crates/algokit_transact_ffi/src/: lib.rs  multisig.rs
crates/algokit_utils/: Cargo.toml
crates/algokit_utils/src/: config.rs  lib.rs
crates/algokit_utils/tests/: algod_tests.rs  applications_tests.rs  clients_tests.rs  kmd_tests.rs  transactions_tests.rs
crates/algokit_utils_ffi/: Cargo.toml  uniffi.toml
crates/algokit_utils_ffi/src/: lib.rs
crates/ffi_mutex/: Cargo.toml
crates/ffi_mutex/src/: lib.rs
(+423 files in other folders)
