[package]
name = "algod_client_tests"
version = "0.1.0"
authors = ["AlgoKit Core Team"]
description = "Integration tests for algod_client crate"
license = "MIT"
edition = "2024"

[dependencies]
# Test dependencies
tokio = { version = "1.39.2", features = ["full"] }
tokio-test = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"

# Algod client under test
algod_client = { path = "../algod_client" }
algokit_transact = { path = "../algokit_transact", features = ["test_utils"] }
algokit_http_client = { path = "../algokit_http_client" }

# Test fixtures and utilities
once_cell = "1.19"
base64 = "0.22.1"
reqwest = "^0.12"
futures = "0.3"

# Algorand account generation replaced with algokit_transact and ed25519_dalek

# CLI support and string processing
regex = "1.10.2"

# Cryptographic operations
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8"
sha2 = "0.10.8"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
