[package]
name = "algokit_abi"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
num-bigint = "0.4"
regex = "1.0"
base32 = { workspace = true }
sha2 = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
rstest = "0.25.0"
hex = "0.4"
