[package]
name = "algokit_abi"
version = "0.1.0"
edition = "2024"

[dependencies]
snafu = { workspace = true }
num-bigint = "0.4"
regex = "1.0"
base32 = { workspace = true }
sha2 = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
base64 = "0.21"
algokit_test_artifacts = { path = "../algokit_test_artifacts" }

[dev-dependencies]
rstest = { workspace = true }
hex = "0.4"
insta = { version = "1.43", features = ["json"] }
algokit_test_artifacts = { path = "../algokit_test_artifacts" }
