[package]
name = "algokit_http_client"
version = "0.1.0"
edition = "2024"

[features]
default = ["default_client"]
ffi_uniffi = ["dep:uniffi"]
default_client = ["dep:reqwest"]

[dependencies]
async-trait = "0.1.88"
reqwest = { version = "0.12.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
snafu = { workspace = true }
uniffi = { workspace = true, optional = true }
