[package]
name = "algokit_transact"
version = "0.1.0"
edition = "2024"

[features]
test_utils = ["dep:ed25519-dalek", "dep:convert_case"]

[dependencies]
base32 = { workspace = true }
base64 = "0.22.1"
convert_case = { version = "0.8.0", optional = true }
derive_builder = { version = "0.20.2" }
ed25519-dalek = { version = "2.1.1", optional = true }
rmp = "0.8.12"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.133"
serde_repr = "0.1.20"
serde_with = "3.11.0"
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
algokit_transact = { path = '.', features = ["test_utils"] }
