[package]
name = "algokit_transact_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["ffi_uniffi"]
ffi_uniffi = ["dep:uniffi"]

[dependencies]
algokit_transact = { path = "../algokit_transact", features = ['test_utils'] }
ffi_macros = { path = "../ffi_macros" }

snafu = "0.8"
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
base64 = "0.22.1"

uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
], optional = true }
pretty_assertions = "1.4.1"


[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns", # Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
] }
algokit_transact = { path = "../algokit_transact", features = ['test_utils'] }
ffi_macros = { path = "../ffi_macros" }
snafu = "0.8"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
base64 = "0.22.1"
