[package]
name = "algokit_utils_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
algod_client = { version = "0.0.1", path = "../algod_client", default-features = false }
algokit_abi = { version = "0.1.0", path = "../algokit_abi" }
algokit_http_client = { version = "0.1.0", path = "../algokit_http_client", features = ["ffi_uniffi"], default-features = false }
algokit_transact = { version = "0.1.0", path = "../algokit_transact" }
algokit_transact_ffi = { version = "0.1.0", path = "../algokit_transact_ffi" }
algokit_utils = { version = "0.1.0", path = "../algokit_utils" }
async-trait = "0.1.89"
base32 = "0.5.1"
base64 = "0.22.1"
derive_more = "2.0.1"
ed25519-dalek = "2.1.1"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
rand = "0.8"
regex = "1.11.1"
sha2 = "0.10"
snafu.workspace = true
tokio = { version = "1.47.1", features = ["time", "process"] }
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
] }
