[package]
name = "ffi_mutex"
version = "0.1.0"
edition = "2024"

[features]
default = ["ffi_uniffi"]
ffi_uniffi = ["dep:uniffi", "dep:tokio"]
ffi_wasm = ["dep:wasm-bindgen"]

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["sync"], optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen  = { workspace = true, optional = true }
